@@ -27,8 +27,8 @@ under the License.
 
 The sections below describe how to import the Flink project into an IDE
 for the development of Flink itself. For writing Flink programs, please
-refer to the [Java API]({{ site.baseurl }}/dev/projectsetup/java_api_quickstart.html)
-and the [Scala API]({{ site.baseurl }}/dev/projectsetup/scala_api_quickstart.html)
+refer to the [Java API]({{ site.baseurl }}/dev/project-configuration.html)
+and the [Scala API]({{ site.baseurl }}/dev/project-configuration)
 quickstart guides.
 
 **NOTE:** Whenever something is not working in your IDE, try with the Maven
@@ -121,7 +121,7 @@ Enable scalastyle in Intellij by selecting Settings -> Editor -> Inspections, th
 
 This section lists issues that developers have run into in the past when working with IntelliJ:
 
-- Compilation fails with `invalid flag: --add-expots=java.base/sun.net.util=ALL-UNNAMED`
+- Compilation fails with `invalid flag: --add-exports=java.base/sun.net.util=ALL-UNNAMED`
 
 This means that IntelliJ activated the `java11` profile despite an older JDK being used.
 Open the Maven tool window (View -> Tool Windows -> Maven), uncheck the `java11` profile and reimport the project.
